fix(save): resolve alignment issue of grab element

--- a/src/components/SideBar/Save/SaveItem/SaveItem.module.scss
+++ b/src/components/SideBar/Save/SaveItem/SaveItem.module.scss
@@ -17,6 +17,7 @@
    .drag {
       cursor: grab;
       font-size: 2rem;
+      display: flex;
    }
 
    &__info {
